# m1

./: .gitmodules  BG12-TEI+.xml  CMakeLists.txt  Doxyfile  README.md  dependencies.txt  gen_graph_init.py  gen_graph_init_old.py  json_select.py  m1.doxyfile  m1A_constants.h  m1A_env.cpp  m1A_env.h  m1B_graph_init.cpp  m1B_graph_init.h  m1B_lv0_item.cpp  m1B_lv0_item.h  m1B_lv0_item_members.cpp  m1B_lv0_item_test.cpp  m1B_lv1_item.cpp  m1B_lv1_item.h  m1B_lv2_item.cpp  m1B_lv2_item.h  m1B_lv2_item_test.cpp  m1B_nav.cpp  m1B_nav.h  m1B_store.cpp  m1B_store.h  m1C_interp.cpp  m1C_interp.h  m1D_main_window.cpp  m1D_main_window.h  m1D_passages_panel.cpp  m1D_passages_panel.h  m1D_tree_display.cpp  m1D_tree_display.h  m1_constants.h  m1_env.cpp  m1_env.h  m1_lv0_item.h  (+21 more)
Make Texts/: inria_query.py  transform_bg.py
PPSV/Anandamakaranda/: html_2_tei.py
PPVS/: idml_test.py
gitaDnl/: INRIA_used_abbr.ods  assemble_gita.py  custom_gita.py  gita_template.fodt  iskcon_dnl.py  json_test.py
gram_codes_package/: __init__.py  gram_codes_module.py
lemmatization/: db_2_json.py  dnl_morph_attr.py  english.py  greek.py  list_punc.py  punctuation.odt
lv0_test/: CMakeLists.txt
lv1_test/: CMakeLists.txt
lv2_test/: CMakeLists.txt
m1_src/: CMakeLists.txt  M1B_tei_interface.cpp  M1B_tei_interface.h  m1A_constants.h  m1A_env.cpp  m1A_env.h  m1B_Store_debug.cpp  m1B_graph_init.cpp  m1B_graph_init.h  m1B_json_interface.cpp  m1B_json_interface.h  m1B_lv0_item.cpp  m1B_lv0_item.h  m1B_lv0_item_members.cpp  m1B_lv0_item_test.cpp  m1B_lv1_item.cpp  m1B_lv1_item.h  m1B_lv2_item.cpp  m1B_lv2_item.h  m1B_lv2_item_debug.cpp  m1B_lv2_item_instantiation.cpp  m1B_lv2_item_linking.cpp  m1B_lv2_item_types.cpp  m1B_lv2_iterators.cpp  m1B_lv2_iterators.h  m1B_nav.h  m1B_store.cpp  m1B_store.h  m1B_store_load_save.cpp  m1B_store_mmap.cpp  m1B_tei_interface.cpp  m1B_tei_interface.h  m1B_tei_interface_old.cpp  m1C_interp.cpp  m1C_interp.h  m1C_interp_new.cpp  m1C_interp_new.h  m1C_interp_old.cpp  m1C_interp_subclasses.cpp  m1D_main_window.cpp  (+12 more)
